--- a/Stok_PT_Dewa_Sukses_Mandiri/public/css/style.css
+++ b/Stok_PT_Dewa_Sukses_Mandiri/public/css/style.css
@@ -1,75 +1,102 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-.sideBar{
-    height: 100vh;
-    width: 20vw;
-    background-color: #ffffff;
+.sidebar::-webkit-scrollbar, .content::-webkit-scrollbar {
+    background: transparent; /* Chrome/Safari/Webkit */
+    height: 0px;
+    width: 0px;
+  }
+      
+  .sidebar, .content {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE 10+ */
+  }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
 }
-.content{
-    height: 100vh;
-    width: 80vw;
-    background-color: #EEEAEA;
-    padding-left: 40px;
+a{
+    text-decoration: none;
 }
 body{
     display: flex;
+    overflow-y: none;
 }
-*{
-    font-family: 'Poppins', sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: content-box;
+.sidebar {
+    display: flex;
+    background-color: #ffffff;
+    height: 100vh;
+    width: 20vw;
+    flex-direction: column;
+    align-items: stretch;
+    overflow: scroll;
 }
-.sidebarlogo img{
-    width: 175px;
-}
-.sidebarmenu{
+
+.sidebar-logo {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    letter-spacing: 0.2px;
+    padding-top: 10px;
+}
+.sidebar-logo img{
+    width: 135px;
+    height: auto;
+}
+.sidebar-namaperusahaan{
+    font-weight: 600;
+    padding-top: 10px;
+}
+.sidebar-menu {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    padding-top: 40px;
     align-items: center;
 }
-.sidebarmenu a{
-    text-decoration: none;
-    color: black;
-    margin-top: 20px;
-}
-.sidebarlogo{
+.sidebar-menu>div {
+    width: 100%;
+    display: flex;
     margin-bottom: 30px;
+    flex-direction: column;
+    align-items: center;
 }
-.sidebar-bottom{
-    margin-top: 100px;
-    height: 20vh;
-    background-color: green;
-    padding-top: 8px;
-    padding-left: 8px;
-}
-.tampilanmenu{
+.sidebar-menu>div>a{
+    width: 70%;
     display: flex;
-}
-.menubox{
-    height: 15vh;
-    width: 18vw;
-    background-color: green;
-    margin-right: 40px;
-}
-.tampilanlogout{
-    margin-top: 20px;
-    display: flex;
-}
-.tampilanlogout a{
-    text-decoration: none;
     color: black;
+    padding: 15px;
+    flex-direction: column;
+    align-items: center;
 }
-table{
-    border-collapse: collapse;
+.sidebar-menu>div>a:hover{
+    border-radius: 10px;
+    background-color: #7BAF66;
+    color: #ffffff;
 }
-table#isi td, table#isi th{
-    padding: 8px 16px;
-    border: 1px solid;
+.sidebar-user{
+    background-color: #7BAF66;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
-table#form td, table#form th{
-    padding-left: 1px;
-    padding-right: 5px;
-    text-align: start;
+.sidebar-user>div{
+    padding-bottom: 10px;
+}
+.sidebar-user>.nama>.user{
+    color: #ffffff;
+}
+.sidebar-user>.logout>a{
+    color: #ffffff;
+}
+.content{
+    overflow: scroll;
+    background-color: #eeeaea;
+    height: 100vh;
+    width: 80vw;
+    padding-left: 20px;
+    padding-top: 10px;
 }
