--- a/Stok_PT_Dewa_Sukses_Mandiri/public/css/style.css
+++ b/Stok_PT_Dewa_Sukses_Mandiri/public/css/style.css
@@ -97,7 +97,7 @@ body{
     background-color: #eeeaea;
     height: 100vh;
     width: 80vw;
-    padding-left: 20px;
+    padding-left: 60px;
     padding-top: 10px;
 }
 .isi-content{
@@ -105,6 +105,7 @@ body{
     flex-direction: row;
     justify-content: flex-start;
     gap: 50px;
+    margin-top: 40px;
 }
 .isi-content>div>a{
     display: block;
@@ -128,6 +129,9 @@ body{
 .content-keluar{
     background-color: #A66C7D;
     color: #ffffff;
+}
+.judul-content{
+    margin-top: 90px;
 }
 .judul-content>.intro{
     font-size: 40px;
