--- a/Stok_PT_Dewa_Sukses_Mandiri/public/css/style.css
+++ b/Stok_PT_Dewa_Sukses_Mandiri/public/css/style.css
@@ -141,4 +141,17 @@ body{
 .title{
     font-size: 40px;
 }
-
+.jumlah{
+    font-size: 55px;
+}
+#keluar{
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    margin-bottom: 10px;
+    gap: 5px;
+}
