--- a/Stok_PT_Dewa_Sukses_Mandiri/public/css/style.css
+++ b/Stok_PT_Dewa_Sukses_Mandiri/public/css/style.css
@@ -139,7 +139,7 @@ body{
     margin-bottom: -10px;
 }
 .title{
-    font-size: 40px;
+    font-size: 50px;
 }
 .jumlah{
     font-size: 55px;
@@ -154,4 +154,11 @@ body{
     cursor: pointer;
     margin-bottom: 10px;
     gap: 5px;
+}
+#isi td, #isi th{
+    border: 1px solid black;
+}
+
+.table table{
+    border: 1px solid black;
 }
