--- a/Stok_PT_Dewa_Sukses_Mandiri/public/css/barang.css
+++ b/Stok_PT_Dewa_Sukses_Mandiri/public/css/barang.css
@@ -1,6 +1,6 @@
 .sub-petunjuk-1{
     background-color: #7BAF66;
-    width: fit-content;
+    width: 90%;
     padding: 10px;
     border-radius: 5px;
     color: #ffffff;
